@@ -23,10 +23,7 @@
 
 // key: compiler.err.invalid.canonical.constructor.in.record
 // key: compiler.misc.canonical.must.not.contain.explicit.constructor.invocation
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
 // key: compiler.misc.canonical
-// options: --enable-preview -source ${jdk.version}
 
 record R(int x) {
     public R(int x) { super(); this.x = x; }
